# ffi_jpeg_encode

./: .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
hook/: build.dart
ios/: ffi_jpeg_encode.podspec
ios/Classes/: ffi_jpeg_encode.c
lib/: ffi_jpeg_encode.dart
lib/src/: ffi_jpeg_encode_bindings_generated.dart
src/: CMakeLists.txt  ffi_jpeg_encode.c  ffi_jpeg_encode.h
